fix scrollbar and editter padding

--- a/app/globals.css
+++ b/app/globals.css
@@ -113,6 +113,7 @@ h6 {
 /* width */
 ::-webkit-scrollbar {
   width: 7px;
+  height: 7px;
 }
 
 /* Track */
